@@ -20,3 +20,11 @@ The **Microsoft Java client generator** tool generates client libraries for acce
 ## Test
 
 1. `mvn clean test` (from packages/http-client-java/generator directory)
+
+## Debug
+
+### Debugging Java Code
+
+Run `Main` class
+
+- Add `--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED` to VM options.
