@@ -12,7 +12,6 @@ import com.microsoft.typespec.http.client.generator.core.util.ClientModelUtil;
 import io.clientcore.core.utils.CoreUtils;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
@@ -22,6 +21,7 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 /**
  * Manages metadata about properties in a {@link ClientModel} and how they correlate with model class generation.
@@ -124,6 +124,14 @@ public final class ClientModelPropertiesManager {
             xmlRootElementNamespace = model.getXmlNamespace();
         }
 
+        Set<String> thisModelPropertySerializeNames = model.getProperties()
+            .stream()
+            // discriminator property is known to be redefined in subclass
+            .filter(property -> !property.isPolymorphicDiscriminator())
+            .map(ClientModelProperty::getSerializedName)
+            .filter(name -> Objects.nonNull(name) && !name.isEmpty())
+            .collect(Collectors.toSet());
+
         for (ClientModelProperty property : ClientModelUtil.getParentProperties(model)) {
             // Ignore additional properties from parent types as it will be handled specifically in the subtype.
             if (property.isAdditionalProperties()) {
@@ -136,6 +144,11 @@ public final class ClientModelPropertiesManager {
             }
 
             if (!property.isPolymorphicDiscriminator()) {
+                if (thisModelPropertySerializeNames.contains(property.getSerializedName())) {
+                    // skip the property from parent that is overwritten in this model
+                    continue;
+                }
+
                 superPropertyConsumer(property, superRequiredProperties, superConstructorProperties,
                     superReadOnlyProperties, superSetterProperties, settings);
                 hasRequiredProperties |= property.isRequired();
@@ -277,9 +290,8 @@ public final class ClientModelPropertiesManager {
                 + "Add additional possible XmlReader name variables to resolve this issue.");
         }
 
-        this.xmlNamespaceToConstantMapping = model.getXmlName() == null
-            ? Collections.emptyMap()
-            : ClientModelUtil.xmlNamespaceToConstantMapping(model);
+        this.xmlNamespaceToConstantMapping
+            = model.getXmlName() == null ? Map.of() : ClientModelUtil.xmlNamespaceToConstantMapping(model);
     }
 
     private static void superPropertyConsumer(ClientModelProperty property,
@@ -378,6 +390,11 @@ public final class ClientModelPropertiesManager {
     /**
      * Consumes each constructor {@link ClientModelProperty property} defined by super classes of the
      * {@link #getModel() model}.
+     * <p>
+     * This is part of the properties from superclass that would appear in the constructor of this model.
+     * This is not the same as the constructor parameters in super class.
+     * Duplicated properties from superclass (that would be overwritten by properties of this model)
+     * only appears once, in "constructorProperties", not in "superConstructorProperties".
      *
      * @param consumer The {@link ClientModelProperty} consumer.
      */
